# stm32-util-rot-provisioning

./: CMakeLists.txt  LICENSE.html  LICENSE.md  README.html  README.md  Release_Notes.html  Release_Notes.md  STMicroelectronics.rot_provisioning.pdsc  STMicroelectronics.rot_provisioning.sha1  SW_Security_Level.md  requirements.txt  sbom_cdx.json
helper/common/: cli.py  hxml.py  log.py  misc.py  singleton.py  update_file_handler.py
helper/config/: appli_config.py  config_print_utils.py  example_config.py  flash_layout_oemirot.py  generic_config.py  generic_flash_layout.py  memory_config.py  oemirot_config.py  option_bytes.py  project_config.py  provisioning_config.py
helper/exception/: rot_exception.py
helper/project/: generator.py  project_appli.py  project_generic.py  project_oemirot.py
helper/tools/: appli_cfg.py  cube_programmer.py  cube_programmer_rdp.py  tools_config.py  tpc.py
helper/workflow/: process.py  step.py
oemirot/: generation_step.py  generic_provisioning.py  installation_step.py  provisioning.py  regression_step.py
